--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -1,3 +1,7 @@
+- name: Include sensitive vars credentials
+  #you must use --as-vault-pass when used the role
+  include_vars: vars/credentials.yml
+
 - name: Create Homework Assignment project
   tower_project:
     name: "{{ proj_name }}"
@@ -8,61 +12,74 @@
     scm_branch: "{{ scm_branch }}"
     scm_update_on_launch: True
     scm_update_cache_timeout: 60    
-    tower_host: tower1.{{tower_GUID}}.example.opentlc.com
+    tower_host: "{{ tower_host }}"
     state: present
 
 - name: Machine Credentail to connect to workstation using openstack.pub
   tower_credential:
     name: Connect_to_workstation
-    organization: Default
+    organization: "{{ org_name }}" 
     state: present
     kind: ssh
-    tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
-    ssh_key_data: "/root/.ssh/openstack.pem"
-    username: cloud-user
+    tower_host: "{{ tower_host }}" 
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
+    ssh_key_data: "{{ lookup('file', '/root/.ssh/openstack.pem') }}"  
+    username: "{{ user_cred_name }}" 
 
-- name: Create Inventory
-  command: |
-    tower-cli inventory create -n "{{static_inventory_name}}" --organization "{{org_name}}"
+- name: Create Inventory {{ static_inventory_name }} in Organization {{ org_name }} 
+  tower_inventory:
+    name: "{{ static_inventory_name }}"
+    description: "SCM inventory"
+    organization: "{{ org_name }}"
+    state: present
+    tower_host: "{{ tower_host }}"
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
+    tower_verify_ssl: no
 
-- name: Create Group in static inventory 
-  command: |
-    tower-cli group create --inventory "{{static_inventory_name}}"  --name {{group_name}}
+
+- name: Create Group {{ group_name }} in static inventory {{ static_inventory_name }}
+  tower_group:
+    name: "{{ group_name }}"
+    description: "SCM inventory group"
+    inventory: "{{ static_inventory_name }}"
+    state: present
+    tower_host: "{{ tower_host }}" 
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
+    tower_verify_ssl: no 
 
 
-- name: Add tower host
+- name: Add tower host {{ host_name }} in static inventory {{ static_inventory_name }}
   tower_host:
-    name: "{{host_name}}"
+    name: "{{ host_name }}"
     description: "workstation"
     inventory: "{{static_inventory_name}}"
     state: present
-    tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
+    tower_host: "{{ tower_host }}" 
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
     tower_verify_ssl: no
 
-- name: Associate workstation host to group 
+- name: Associate workstation host to group {{ group_name }}
   command: | 
-    tower-cli host associate --host "{{host_name}}" --group "{{group_name}}"
-
+    tower-cli host associate --host "{{ host_name }}" --group "{{ group_name }}"
 
 - name: Tower Creds key file
   tower_credential:
     name: "{{ opentlc_cred_name }}"
-    organization: Default
+    organization: "{{ org_name }}"
     state: present
     kind: ssh
-    tower_host: tower1.{{tower_GUID}}.example.opentlc.com
-    tower_username: admin
-    tower_password: r3dh4t1!
+    tower_host: "{{ tower_host }}" 
+    tower_username: "{{ user_name }}"
+    tower_password: "{{ password }}"
     tower_verify_ssl: no
-    ssh_key_data: /root/.ssh/mykey.pem
+    ssh_key_data: "{{ lookup('file', '/root/secret.pem') }}"  
     username: "{{ opentlc_login }}"
 
 - name: Remove secret
   file:
     name: /root/secret.pem
     state: absent
-
