--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -1,8 +1,28 @@
-- hosts: workstation
+- name: Run a Smoke Test on the QA 
+  hosts: workstation
   gather_facts: false
   tasks:
+
   - name: OpenStack servers
+    os_server_info:
+      cloud: openstack
+      server: frontend
+    register: openstack_info 
+    tags:
+      - osp.smoke
+
+  - debug:
+      msg: openstack_info 
+
   - name: Curl website
+    uri:
+      url: "http://{{ item.public_v4 }"
+      with_items:
+        - "{{ openstack_info.ansible_facts.openstack_servers }}" 
+    return_content: yes
+    register: webpage
+    tags:
+      - osp.smoke
 
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
