--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -2,11 +2,10 @@
   hosts: workstation
   gather_facts: false
   tasks:
-
   - name: OpenStack servers
     os_server_info:
       cloud: openstack
-      server: frontend
+      server: "frontend"
     register: openstack_info 
     tags:
       - osp.smoke
@@ -17,9 +16,9 @@
   - name: Curl website
     uri:
       url: "http://{{ item.public_v4 }"
-      with_items:
-        - "{{ openstack_info.ansible_facts.openstack_servers }}" 
-    return_content: yes
+      return_content: yes
+    with_items:
+      - "{{ openstack_info.ansible_facts.openstack_servers }}" 
     register: webpage
     tags:
       - osp.smoke
