--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -9,6 +9,15 @@
     backup: yes
 
 - name: enable repos
- 
-- name: install base tools and packages
+  template:
+    src: repos.template.j2
+    dst: /etc/yum.repos.d/open_three-app.repo
+    mode: 0644
 
+- name: install base tools and packages
+  yum:
+    name: "{{ item }}"
+    state: latest
+  with_items:
+    - httpie
+    - python-pip
