--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -11,7 +11,7 @@
 - name: enable repos
   template:
     src: repos.template.j2
-    dst: /etc/yum.repos.d/open_three-app.repo
+    dest: /etc/yum.repos.d/open_three-app.repo
     mode: 0644
 
 - name: install base tools and packages
