--- a/roles/base-config/tasks/main.yml
+++ b/roles/base-config/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: enable repos
   template:
-    src: repos.template.j2
+    src: repos_template.j2
     dest: /etc/yum.repos.d/open_three-app.repo
     mode: 0644
 
