--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -3,19 +3,19 @@
   gather_facts: false
   tasks:
   - name: OpenStack servers
-    os_server_facts:
+    os_server_info:
       cloud: openstack
-      server: 'frontend'
+      server: frontend
     register: openstack_info 
     tags:
       - osp.smoke
 
   - debug:
-      msg: openstack_info 
+      msg: "{{ openstack_info }}"
 
   - name: Curl website
     uri:
-      url: "http://{{ item.public_v4 }"
+      url: "http://{{ item.public_v4 }}"
       return_content: yes
     with_items:
       - "{{ openstack_info.ansible_facts.openstack_servers }}" 
