--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -5,22 +5,21 @@
   - name: OpenStack servers
     os_server_info:
       cloud: openstack
-      server: frontend
-    register: openstack_info 
+      filters:
+        hostname: frontend
+    register: result
     tags:
       - osp.smoke
 
-  - name: Print return information from the previous task
-    ansible.builtin.debug:
-      var: openstack_info 
-      verbosity: 2
+  - name: Retrieve lb (frontend) public_v4
+    debug:
+      msg: "{{result.openstack_servers[0].public_v4}}"
 
   - name: Curl website
     uri:
-      url: "http://{{ item.public_v4 }}"
+      url: "http://{{ result.openstack_servers[0].public_v4 }}"
+      timeout: 60
       return_content: yes
-    with_items:
-      - "{{ openstack_info.ansible_facts.openstack_servers }}" 
     register: webpage
     tags:
       - osp.smoke
