--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -11,8 +11,8 @@
     tags:
       - osp.smoke
 
-  - debug:
-      msg: "{{ result.openstack_servers[0].public_v4 }}"
+#  - debug:
+#      msg: "{{ result.openstack_servers[0].public_v4 }}"
 
   - name: Curl website
     uri:
@@ -20,8 +20,6 @@
       timeout: 60
       return_content: yes
     register: webpage
-    tags:
-      - osp.smoke
 
   - name: Fail if 'Ansible has done its job' is not in the page content
     fail:
