--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -11,8 +11,8 @@
     tags:
       - osp.smoke
 
-#  - debug:
-#      msg: "{{ result.openstack_servers[0].public_v4 }}"
+  - debug:
+      msg: "{{ result.openstack_servers[0].public_v4 }}"
 
   - name: Curl website
     uri:
