--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -1,24 +1,20 @@
-- name: Run a Smoke Test on the QA 
-  hosts: workstation
+- hosts: workstation
   gather_facts: false
   tasks:
   - name: OpenStack servers
-    os_server_info:
-      cloud: openstack
-      filters:
-        hostname: frontend
-    register: result
+    os_server_facts:
+      cloud: ospcloud
+      server: 'frontend'
+    register: openstack_info
     tags:
       - osp.smoke
 
-  - debug:
-      msg: "{{ result.openstack_servers[0].public_v4 }}"
-
-  - name: Curl website
+  - name: Check curl on load balancer frontend servers
     uri:
-      url: "http://{{ result.openstack_servers[0].public_v4 }}"
-      timeout: 60
+      url: "http://{{ item.public_v4}}"
       return_content: yes
+    with_items:
+      - "{{ openstack_info.ansible_facts.openstack_servers }}"
     register: webpage
 
   - name: Fail if 'Ansible has done its job' is not in the page content
