fix cloud in smoke test

--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -2,7 +2,7 @@
   gather_facts: false
   tasks:
   - name: OpenStack servers
-    os_server_info:
+    os_server_facts:
       cloud: openstack
       server: 'frontend'
     register: openstack_info
