--- a/site-smoke-osp.yml
+++ b/site-smoke-osp.yml
@@ -11,8 +11,9 @@
 
   - name: Check curl on load balancer frontend servers
     uri:
-      url: "http://{{ item.public_v4}}"
-      return_content: yes
+      url: "http://{{ item.public_v4 }}"
+      return_content: yeos
+      timeout: 600
     with_items:
       - "{{ openstack_info.ansible_facts.openstack_servers }}"
     register: webpage
