--- a/roles/lb-tier/tasks/main.yml
+++ b/roles/lb-tier/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Print all available facts
+  ansible.builtin.debug:
+    var: ansible_facts
+
 - name: install {{ payload }}
   yum:
     name: "{{ payload }}"
