--- a/roles/lb-tier/tasks/main.yml
+++ b/roles/lb-tier/tasks/main.yml
@@ -1,8 +1,4 @@
 ---
-- name: Print all available facts
-  ansible.builtin.debug:
-    var: ansible_facts
-
 - name: install {{ payload }}
   yum:
     name: "{{ payload }}"
@@ -18,3 +14,8 @@
     src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
     mode: 0644
+
+- name: start {{ payload }}
+  service:
+    name: "{{ payload }}"
+    state: restarted
