--- a/roles/osp-instance-delete/tasks/main.yml
+++ b/roles/osp-instance-delete/tasks/main.yml
@@ -2,12 +2,12 @@
 # tasks file for roles/osp-instance-delete
   - name: Fetch Instance Info
     os_server_facts:
-      cloud: openstack
-      region_name: regionOne
+      cloud: "{{osp_cloud}}"
+      region_name: "{{osp_region}}"
     register: result
   - name: Delete instances
     os_server:
-      cloud: openstack
+      cloud: "{{osp_cloud}}"
       name: "{{ item.name }}"
       state: absent
     loop: "{{result.ansible_facts.openstack_servers}}" 
